rework proto structure and add cors to service
