# taxi/grpc/gateway/taxiroute/taxi_route.pb.go
@@ -10,6 +10,7 @@ import (
 	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
 	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
 	emptypb "google.golang.org/protobuf/types/known/emptypb"
+	structpb "google.golang.org/protobuf/types/known/structpb"
 	reflect "reflect"
 	sync "sync"
 )
@@ -26,11 +27,12 @@ type Route struct {
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
 
-	Timestamp   float64        `protobuf:"fixed64,1,opt,name=timestamp,proto3" json:"timestamp,omitempty"`
-	Bbox        []float32      `protobuf:"fixed32,2,rep,packed,name=bbox,proto3" json:"bbox,omitempty"`
-	Distance    float64        `protobuf:"fixed64,3,opt,name=distance,proto3" json:"distance,omitempty"`
-	Duration    float64        `protobuf:"fixed64,4,opt,name=duration,proto3" json:"duration,omitempty"`
-	Coordinates []*Route_Point `protobuf:"bytes,5,rep,name=coordinates,proto3" json:"coordinates,omitempty"`
+	Timestamp float64   `protobuf:"fixed64,1,opt,name=timestamp,proto3" json:"timestamp,omitempty"`
+	Bbox      []float64 `protobuf:"fixed64,2,rep,packed,name=bbox,proto3" json:"bbox,omitempty"`
+	Distance  float64   `protobuf:"fixed64,3,opt,name=distance,proto3" json:"distance,omitempty"`
+	Duration  float64   `protobuf:"fixed64,4,opt,name=duration,proto3" json:"duration,omitempty"`
+	// repeated Point coordinates = 5;
+	Coordinates []*structpb.ListValue `protobuf:"bytes,5,rep,name=coordinates,proto3" json:"coordinates,omitempty"`
 }
 
 func (x *Route) Reset() {
@@ -72,7 +74,7 @@ func (x *Route) GetTimestamp() float64 {
 	return 0
 }
 
-func (x *Route) GetBbox() []float32 {
+func (x *Route) GetBbox() []float64 {
 	if x != nil {
 		return x.Bbox
 	}
@@ -93,66 +95,11 @@ func (x *Route) GetDuration() float64 {
 	return 0
 }
 
-func (x *Route) GetCoordinates() []*Route_Point {
+func (x *Route) GetCoordinates() []*structpb.ListValue {
 	if x != nil {
 		return x.Coordinates
 	}
 	return nil
-}
-
-type Route_Point struct {
-	state         protoimpl.MessageState
-	sizeCache     protoimpl.SizeCache
-	unknownFields protoimpl.UnknownFields
-
-	Latitude  float32 `protobuf:"fixed32,1,opt,name=latitude,proto3" json:"latitude,omitempty"`
-	Longitude float32 `protobuf:"fixed32,2,opt,name=longitude,proto3" json:"longitude,omitempty"`
-}
-
-func (x *Route_Point) Reset() {
-	*x = Route_Point{}
-	if protoimpl.UnsafeEnabled {
-		mi := &file_taxi_route_proto_msgTypes[1]
-		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
-		ms.StoreMessageInfo(mi)
-	}
-}
-
-func (x *Route_Point) String() string {
-	return protoimpl.X.MessageStringOf(x)
-}
-
-func (*Route_Point) ProtoMessage() {}
-
-func (x *Route_Point) ProtoReflect() protoreflect.Message {
-	mi := &file_taxi_route_proto_msgTypes[1]
-	if protoimpl.UnsafeEnabled && x != nil {
-		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
-		if ms.LoadMessageInfo() == nil {
-			ms.StoreMessageInfo(mi)
-		}
-		return ms
-	}
-	return mi.MessageOf(x)
-}
-
-// Deprecated: Use Route_Point.ProtoReflect.Descriptor instead.
-func (*Route_Point) Descriptor() ([]byte, []int) {
-	return file_taxi_route_proto_rawDescGZIP(), []int{0, 0}
-}
-
-func (x *Route_Point) GetLatitude() float32 {
-	if x != nil {
-		return x.Latitude
-	}
-	return 0
-}
-
-func (x *Route_Point) GetLongitude() float32 {
-	if x != nil {
-		return x.Longitude
-	}
-	return 0
 }
 
 var File_taxi_route_proto protoreflect.FileDescriptor
@@ -161,31 +108,28 @@ var file_taxi_route_proto_rawDesc = []byte{
 	0x0a, 0x10, 0x74, 0x61, 0x78, 0x69, 0x5f, 0x72, 0x6f, 0x75, 0x74, 0x65, 0x2e, 0x70, 0x72, 0x6f,
 	0x74, 0x6f, 0x12, 0x09, 0x74, 0x61, 0x78, 0x69, 0x72, 0x6f, 0x75, 0x74, 0x65, 0x1a, 0x1b, 0x67,
 	0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2f, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2f, 0x65,
-	0x6d, 0x70, 0x74, 0x79, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x22, 0xee, 0x01, 0x0a, 0x05, 0x52,
-	0x6f, 0x75, 0x74, 0x65, 0x12, 0x1c, 0x0a, 0x09, 0x74, 0x69, 0x6d, 0x65, 0x73, 0x74, 0x61, 0x6d,
-	0x70, 0x18, 0x01, 0x20, 0x01, 0x28, 0x01, 0x52, 0x09, 0x74, 0x69, 0x6d, 0x65, 0x73, 0x74, 0x61,
-	0x6d, 0x70, 0x12, 0x12, 0x0a, 0x04, 0x62, 0x62, 0x6f, 0x78, 0x18, 0x02, 0x20, 0x03, 0x28, 0x02,
-	0x52, 0x04, 0x62, 0x62, 0x6f, 0x78, 0x12, 0x1a, 0x0a, 0x08, 0x64, 0x69, 0x73, 0x74, 0x61, 0x6e,
-	0x63, 0x65, 0x18, 0x03, 0x20, 0x01, 0x28, 0x01, 0x52, 0x08, 0x64, 0x69, 0x73, 0x74, 0x61, 0x6e,
-	0x63, 0x65, 0x12, 0x1a, 0x0a, 0x08, 0x64, 0x75, 0x72, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x18, 0x04,
-	0x20, 0x01, 0x28, 0x01, 0x52, 0x08, 0x64, 0x75, 0x72, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x12, 0x38,
-	0x0a, 0x0b, 0x63, 0x6f, 0x6f, 0x72, 0x64, 0x69, 0x6e, 0x61, 0x74, 0x65, 0x73, 0x18, 0x05, 0x20,
-	0x03, 0x28, 0x0b, 0x32, 0x16, 0x2e, 0x74, 0x61, 0x78, 0x69, 0x72, 0x6f, 0x75, 0x74, 0x65, 0x2e,
-	0x52, 0x6f, 0x75, 0x74, 0x65, 0x2e, 0x50, 0x6f, 0x69, 0x6e, 0x74, 0x52, 0x0b, 0x63, 0x6f, 0x6f,
-	0x72, 0x64, 0x69, 0x6e, 0x61, 0x74, 0x65, 0x73, 0x1a, 0x41, 0x0a, 0x05, 0x50, 0x6f, 0x69, 0x6e,
-	0x74, 0x12, 0x1a, 0x0a, 0x08, 0x6c, 0x61, 0x74, 0x69, 0x74, 0x75, 0x64, 0x65, 0x18, 0x01, 0x20,
-	0x01, 0x28, 0x02, 0x52, 0x08, 0x6c, 0x61, 0x74, 0x69, 0x74, 0x75, 0x64, 0x65, 0x12, 0x1c, 0x0a,
-	0x09, 0x6c, 0x6f, 0x6e, 0x67, 0x69, 0x74, 0x75, 0x64, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x02,
-	0x52, 0x09, 0x6c, 0x6f, 0x6e, 0x67, 0x69, 0x74, 0x75, 0x64, 0x65, 0x32, 0x45, 0x0a, 0x09, 0x54,
-	0x61, 0x78, 0x69, 0x52, 0x6f, 0x75, 0x74, 0x65, 0x12, 0x38, 0x0a, 0x0a, 0x43, 0x72, 0x65, 0x61,
-	0x74, 0x65, 0x54, 0x61, 0x78, 0x69, 0x12, 0x10, 0x2e, 0x74, 0x61, 0x78, 0x69, 0x72, 0x6f, 0x75,
-	0x74, 0x65, 0x2e, 0x52, 0x6f, 0x75, 0x74, 0x65, 0x1a, 0x16, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c,
-	0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79,
-	0x22, 0x00, 0x42, 0x35, 0x5a, 0x33, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d,
-	0x2f, 0x61, 0x6b, 0x6c, 0x69, 0x76, 0x69, 0x74, 0x79, 0x2f, 0x7a, 0x69, 0x6c, 0x6c, 0x61, 0x2d,
-	0x64, 0x65, 0x6d, 0x6f, 0x73, 0x2f, 0x74, 0x61, 0x78, 0x69, 0x2f, 0x67, 0x72, 0x70, 0x63, 0x2f,
-	0x74, 0x61, 0x78, 0x69, 0x72, 0x6f, 0x75, 0x74, 0x65, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f,
-	0x33,
+	0x6d, 0x70, 0x74, 0x79, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x1a, 0x1c, 0x67, 0x6f, 0x6f, 0x67,
+	0x6c, 0x65, 0x2f, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2f, 0x73, 0x74, 0x72, 0x75,
+	0x63, 0x74, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x22, 0xaf, 0x01, 0x0a, 0x05, 0x52, 0x6f, 0x75,
+	0x74, 0x65, 0x12, 0x1c, 0x0a, 0x09, 0x74, 0x69, 0x6d, 0x65, 0x73, 0x74, 0x61, 0x6d, 0x70, 0x18,
+	0x01, 0x20, 0x01, 0x28, 0x01, 0x52, 0x09, 0x74, 0x69, 0x6d, 0x65, 0x73, 0x74, 0x61, 0x6d, 0x70,
+	0x12, 0x12, 0x0a, 0x04, 0x62, 0x62, 0x6f, 0x78, 0x18, 0x02, 0x20, 0x03, 0x28, 0x01, 0x52, 0x04,
+	0x62, 0x62, 0x6f, 0x78, 0x12, 0x1a, 0x0a, 0x08, 0x64, 0x69, 0x73, 0x74, 0x61, 0x6e, 0x63, 0x65,
+	0x18, 0x03, 0x20, 0x01, 0x28, 0x01, 0x52, 0x08, 0x64, 0x69, 0x73, 0x74, 0x61, 0x6e, 0x63, 0x65,
+	0x12, 0x1a, 0x0a, 0x08, 0x64, 0x75, 0x72, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x18, 0x04, 0x20, 0x01,
+	0x28, 0x01, 0x52, 0x08, 0x64, 0x75, 0x72, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x12, 0x3c, 0x0a, 0x0b,
+	0x63, 0x6f, 0x6f, 0x72, 0x64, 0x69, 0x6e, 0x61, 0x74, 0x65, 0x73, 0x18, 0x05, 0x20, 0x03, 0x28,
+	0x0b, 0x32, 0x1a, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f,
+	0x62, 0x75, 0x66, 0x2e, 0x4c, 0x69, 0x73, 0x74, 0x56, 0x61, 0x6c, 0x75, 0x65, 0x52, 0x0b, 0x63,
+	0x6f, 0x6f, 0x72, 0x64, 0x69, 0x6e, 0x61, 0x74, 0x65, 0x73, 0x32, 0x45, 0x0a, 0x09, 0x54, 0x61,
+	0x78, 0x69, 0x52, 0x6f, 0x75, 0x74, 0x65, 0x12, 0x38, 0x0a, 0x0a, 0x43, 0x72, 0x65, 0x61, 0x74,
+	0x65, 0x54, 0x61, 0x78, 0x69, 0x12, 0x10, 0x2e, 0x74, 0x61, 0x78, 0x69, 0x72, 0x6f, 0x75, 0x74,
+	0x65, 0x2e, 0x52, 0x6f, 0x75, 0x74, 0x65, 0x1a, 0x16, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65,
+	0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79, 0x22,
+	0x00, 0x42, 0x35, 0x5a, 0x33, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f,
+	0x61, 0x6b, 0x6c, 0x69, 0x76, 0x69, 0x74, 0x79, 0x2f, 0x7a, 0x69, 0x6c, 0x6c, 0x61, 0x2d, 0x64,
+	0x65, 0x6d, 0x6f, 0x73, 0x2f, 0x74, 0x61, 0x78, 0x69, 0x2f, 0x67, 0x72, 0x70, 0x63, 0x2f, 0x74,
+	0x61, 0x78, 0x69, 0x72, 0x6f, 0x75, 0x74, 0x65, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -200,14 +144,14 @@ func file_taxi_route_proto_rawDescGZIP() []byte {
 	return file_taxi_route_proto_rawDescData
 }
 
-var file_taxi_route_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
+var file_taxi_route_proto_msgTypes = make([]protoimpl.MessageInfo, 1)
 var file_taxi_route_proto_goTypes = []interface{}{
-	(*Route)(nil),         // 0: taxiroute.Route
-	(*Route_Point)(nil),   // 1: taxiroute.Route.Point
-	(*emptypb.Empty)(nil), // 2: google.protobuf.Empty
+	(*Route)(nil),              // 0: taxiroute.Route
+	(*structpb.ListValue)(nil), // 1: google.protobuf.ListValue
+	(*emptypb.Empty)(nil),      // 2: google.protobuf.Empty
 }
 var file_taxi_route_proto_depIdxs = []int32{
-	1, // 0: taxiroute.Route.coordinates:type_name -> taxiroute.Route.Point
+	1, // 0: taxiroute.Route.coordinates:type_name -> google.protobuf.ListValue
 	0, // 1: taxiroute.TaxiRoute.CreateTaxi:input_type -> taxiroute.Route
 	2, // 2: taxiroute.TaxiRoute.CreateTaxi:output_type -> google.protobuf.Empty
 	2, // [2:3] is the sub-list for method output_type
@@ -235,18 +179,6 @@ func file_taxi_route_proto_init() {
 				return nil
 			}
 		}
-		file_taxi_route_proto_msgTypes[1].Exporter = func(v interface{}, i int) interface{} {
-			switch v := v.(*Route_Point); i {
-			case 0:
-				return &v.state
-			case 1:
-				return &v.sizeCache
-			case 2:
-				return &v.unknownFields
-			default:
-				return nil
-			}
-		}
 	}
 	type x struct{}
 	out := protoimpl.TypeBuilder{
@@ -254,7 +186,7 @@ func file_taxi_route_proto_init() {
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: file_taxi_route_proto_rawDesc,
 			NumEnums:      0,
-			NumMessages:   2,
+			NumMessages:   1,
 			NumExtensions: 0,
 			NumServices:   1,
 		},
